--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,75 @@
 <html>
-    <head>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"></link>
-    </head>
-    <body>
-        <script src="/index.ts"></script>
-        <section style="
+
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    </link>
+    <style>
+        @keyframes expandLeft {
+            from {
+                transform: translate3d(-100%, 0, 0);
+            }
+
+            to {
+                transform: translate3d(0, 0, 0);
+            }
+        }
+
+        .expandLeft {
+            animation-name: expandLeft;
+            animation-duration: 3s;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+        
+        .fadeIn {
+            animation-name: fadeIn;
+            animation-duration: 2s;
+            animation-fill-mode: both;
+        }
+    </style>
+</head>
+
+<body style="margin: 0; padding: 0">
+    <script src="/index.ts"></script>
+    <section style="
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
         ">
-            <h1 style="
+        <h1 style="
                 font-family: 'Roboto Slab', serif;
                 font-size: 2em
             ">
-                &#8203;<span id="mainLabel"></span>
-            </h1>
-            <h4 style="
+            &#8203;<span id="main-label"></span>
+        </h1>
+        <h4 style="
                 margin-top: 0px;
                 font-family: 'Roboto Slab', serif;
                 font-weight: 400;
             ">
-                &#8203;<span id="subLabel"></span>
-            </h4>
-            <div style="
+            &#8203;<span id="sub-label"></span>
+        </h4>
+        <div style="
                 border-bottom-style: solid;
                 height: 0px;
-                width: 100vw;
-            ">
-            </div>
-        </section>
-    </body>
+                width: 100%;
+                transform: translate3d(-100%, 0, 0);
+            " id="main-line">
+        </div>
+    </section>
+    <div id="canvas-root" style="width: 100%; height: 60vh; overflow: hidden; opacity: 0;"></div>
+    <script src="/canvas.ts"></script>
+</body>
+
 </html>
