--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             from {
                 opacity: 0;
             }
+
             to {
                 opacity: 1;
             }
         }
-        
+
         .fadeIn {
             animation-name: fadeIn;
             animation-duration: 2s;
@@ -40,12 +41,13 @@
 </head>
 
 <body style="margin: 0; padding: 0">
-    <script src="/index.ts"></script>
+    <script src="src/index.ts"></script>
     <section style="
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            height: 20vh;
         ">
         <h1 style="
                 font-family: 'Roboto Slab', serif;
@@ -60,16 +62,16 @@
             ">
             &#8203;<span id="sub-label"></span>
         </h4>
-        <div style="
+    </section>
+    <div style="
                 border-bottom-style: solid;
                 height: 0px;
                 width: 100%;
                 transform: translate3d(-100%, 0, 0);
             " id="main-line">
-        </div>
-    </section>
-    <div id="canvas-root" style="width: 100%; height: 60vh; overflow: hidden; opacity: 0;"></div>
-    <script src="/canvas.ts"></script>
+    </div>
+    <div id="canvas-root" style="width: 100%; height: 80vh; overflow: hidden; opacity: 0;"></div>
+    <script src="src/canvas.ts"></script>
 </body>
 
 </html>
