Fix progress logic

--- a/index.html
+++ b/index.html
@@ -59,12 +59,49 @@
             }
         }
 
-        .expandLeft {
-            animation-name: expandLeft;
-            animation-duration: 0.1s;
+        .expandLeft-step1 {
+            animation-name: expandLeft-step1;
+            animation-duration: 800ms;
             animation-fill-mode: both;
             animation-timing-function: linear;
         }
+        .expandLeft-step2 {
+            animation-name: expandLeft-step2;
+            animation-duration: 800ms;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+        .expandLeft-step3 {
+            animation-name: expandLeft-step3;
+            animation-duration: 800ms;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+        .expandLeft-step4 {
+            animation-name: expandLeft-step4;
+            animation-duration: 800ms;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+        .expandLeft-step5 {
+            animation-name: expandLeft-step5;
+            animation-duration: 800ms;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+        .expandLeft-step6 {
+            animation-name: expandLeft-step6;
+            animation-duration: 800ms;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+        .expandLeft-step7 {
+            animation-name: expandLeft-step7;
+            animation-duration: 800ms;
+            animation-fill-mode: both;
+            animation-timing-function: linear;
+        }
+
 
         @keyframes fadeIn {
             from {
