Added information and fix grammar error

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </div>
             <section id="howitworks" style="color: #C0C0C0; background: black">
                 <h1 style="font-size: 1.5em">
-                    How it works?
+                    How does it work?
                 </h1>
                 <h3 style="font-weight: 500; font-size: 1.3em">
                     Platform
@@ -348,7 +348,7 @@
                     allow most orders to be delivered. It is composed of body parts (i.e. main body, rotors, motors,
                     locking component, power source, camera, etc.) and a container box (attached to the locking
                     component, under the main body). You can try attaching the container box to the body by clicking the
-                    button below.
+                    button below. The attached box will be locked by two locking components in opposite sides (colored red).
                 </p>
                 <button id="attachdemo">
                     Attach Box Demo
