--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     </link>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @keyframes expandLeft-step1 {
             to {
