--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         #howitworks {
             width: 50%;
             height: 100%;
+            display: flex;
         }
 
         #howitworks p {
@@ -228,10 +229,13 @@
                 margin-top: 2vh;
                 width: 100%;
                 margin-bottom: 10vh;
+                display: block;
+                text-align: center;
             }
 
             #howitworks p {
                 width: 60vw;
+                margin: auto;
             }
         }
     </style>
